# digilabfastapi

./: README.md  pyproject.toml
scripts/: test.py
