[tool.poetry]
name = "digilabfastapi"
version = "0.0.0"
description = "michelle learns things"
authors = ["Michelle Bieger <michelle@digilab.co.uk>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.mastonry.api"